--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Project</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>My Web Project</h1>
-    </header>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./images/pokeball.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pokedex | Home</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/main.js" type="module"></script>
+  </head>
+  <body>
+    <header id="header"></header>
     <main>
-        <p>Welcome to my web project!</p>
+      <div id="pokedex"></div>
     </main>
-    
-    <footer>
-        <p>&copy; 2025 My Web Project</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
+    <footer id="footer"></footer>
+  </body>
 </html>
