--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./images/pokeball.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex | Home</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <script src="./js/main.js" type="module"></script>
   </head>
   <body>
