added sidebar, styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <header id="header"></header>
     <main>
       <div id="pokedex"></div>
+      <div id="sidebar" class="sidebar hidden">
+        <button id="closeSidebar">✖</button>
+        <div id="sidebarContent"></div>
+      </div>
     </main>
     <footer id="footer"></footer>
   </body>
