--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header id="header"></header>
+    <div id="filter"></div>
     <main>
       <div id="pokedex"></div>
       <div id="sidebar" class="sidebar hidden">
